--- a/pom.xml
+++ b/pom.xml
@@ -6,12 +6,13 @@
 
     <groupId>ru.cwcode.tkach.ipmc</groupId>
     <artifactId>ImprovedPMC</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
     <packaging>pom</packaging>
     <modules>
         <module>Share</module>
         <module>Paper</module>
         <module>Velocity</module>
+        <module>IPMC</module>
     </modules>
 
     <properties>
