--- a/Velocity/pom.xml
+++ b/Velocity/pom.xml
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>ru.cwcode.tkach.ipmc</groupId>
             <artifactId>Share</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
