--- a/Share/pom.xml
+++ b/Share/pom.xml
@@ -24,5 +24,11 @@
             <version>33.0.0-jre</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <version>1.18.30</version>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 </project>
