--- a/Velocity/pom.xml
+++ b/Velocity/pom.xml
@@ -6,7 +6,7 @@
     <parent>
         <groupId>ru.cwcode.tkach.ipmc</groupId>
         <artifactId>ImprovedPMC</artifactId>
-        <version>1.0.0</version>
+        <version>1.0.1</version>
     </parent>
 
     <groupId>ru.cwcode.tkach.ipmc.velocity</groupId>
@@ -30,8 +30,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.8.1</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
+                    <source>17</source>
+                    <target>17</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -83,7 +83,7 @@
         <dependency>
             <groupId>ru.cwcode.tkach.ipmc</groupId>
             <artifactId>Share</artifactId>
-            <version>1.0.0</version>
+            <version>1.0.1</version>
             <scope>compile</scope>
         </dependency>
     </dependencies>
